feat: release v1.2.2 NOT stable AT ALL

--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,8 @@ tasks.withType(ProcessResources).configureEach {
             mod_license            : mod_license,
             mod_version            : mod_version,
             mod_authors            : mod_authors,
-            mod_description        : mod_description
+            mod_description        : mod_description,
+            mod_logo_file          : mod_logo_file
     ]
     inputs.properties replaceProperties
 
