--- a/gradle.properties
+++ b/gradle.properties
@@ -32,7 +32,7 @@ mod_name=Projet ONERIA
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=1.2.1
+mod_version=1.2.2
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -40,4 +40,13 @@ mod_group_id=net.oneria.oneriaserverutilities
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=OneriaTeam, Finerus
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=This is the official mod used for the Oneria server\nIt is not meant to be used in other places, but you can!
+mod_description=A professional utility suite designed for immersive Roleplay servers.\n\n\
+\u27A4 KEY FEATURES:\n\
+\u2022 Identity Obfuscation (Proximity-based & Stealth)\n\
+\u2022 Advanced Chat (Markdown, Colors, Timestamps)\n\
+\u2022 Auto-Schedule (Smart Opening/Closing hours)\n\
+\u2022 World Border Warnings & Custom Join Messages\n\
+\u2022 Staff Stealth Tools & LuckPerms Integration\n\n\
+Optimized for the Oneria RP community.
+
+mod_logo_file=logo.png
