--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,7 @@ loader_version_range=[1,)
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=oneriaserverutilities
 # The human-readable display name for the mod.
-mod_name=Projet ONERIA
+mod_name=Projet O.N.E.R.I.A
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
@@ -38,7 +38,7 @@ mod_version=1.2.2
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=net.oneria.oneriaserverutilities
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=OneriaTeam, Finerus
+mod_authors=OneriaTeam, Finerus, Echollim
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=A professional utility suite designed for immersive Roleplay servers.\n\n\
 \u27A4 KEY FEATURES:\n\
